feat: update open api, CRUD for products
