# green-store/app/lib/api/models/index.ts
@@ -22,9 +22,7 @@ export * from './paged-response-supplier-response';
 export * from './paged-response-user-response';
 export * from './payment-method';
 export * from './payment-response';
-export * from './product-create-request';
 export * from './product-response';
-export * from './product-update-request';
 export * from './response-auth-response-dto';
 export * from './response-category-response';
 export * from './response-customer-response';
