# green-store/app/lib/api/models/product-update-request.ts
@@ -1,26 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Store Management API
- * API for managing store operations including inventory, orders, and customers
- *
- * The version of the OpenAPI document: v1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-
-export interface ProductUpdateRequest {
-    'productName': string;
-    'categoryId'?: number | null;
-    'supplierId'?: number | null;
-    'barcode'?: string | null;
-    'price': number;
-    'unit'?: string | null;
-    'imageUrl'?: string | null;
-}
-
